--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ select:focus{
 #beforeImage,
 #afterWrapper{
   box-sizing:border-box;
-  border:1px solid rgba(255,255,255,.3);
+  border:none;   /* geen extra rand per helft */
 }
 #beforeImage{ border-left:none; }   /* top, right, bottom */
 #afterWrapper{ border-right:none; } /* top, left,  bottom */
